--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
         <div class="project-img">
           <div class="project-img-wrapper">
             <a href="https://github.com/jahithjm/Angular19.git" target="_blank">
-              <img src="images/" alt="project image" draggable="false" />
+              <img src="images/jk1.png" alt="project image" draggable="false" />
             </a>
             <a href="https://github.com/jahithjm/Angular19.git" title="To my works" target="_blank">
               <span class="visit-site">E-commerce
