--- a/index.html
+++ b/index.html
@@ -146,7 +146,6 @@
 
     <section class="work-section">
       <h2>My Works</h2>
-
       <div class="project project0">
         <div class="project-img">
           <div class="project-img-wrapper">
@@ -170,7 +169,7 @@
           <h3>EASY HOUSE RENTAL PLATFORM</h3>
           <span>(RENTAL SERVICE)</span>
           <p>
-        A modern, responsive platform for property rentals. It features searchable listings with filters, booking calendars, and detailed property details. Tenants can explore and contact landlords easily. Landlords can manage properties and track bookings seamlessly.
+              A modern, responsive platform for property rentals. It features searchable listings with filters, booking calendars, and detailed property details. Tenants can explore and contact landlords easily. Landlords can manage properties and track bookings seamlessly.
           </p>
           <ul>
         <li>#html</li>
@@ -222,7 +221,7 @@
             </a>
           </div>
         </div>
-        <a class="circle-dot" href="" title="To my works" target="_blank"> </a>
+        <a class="circle-dot" href="https://github.com/jahithjm/House-Rental-Plaform.git" title="To my works" target="_blank"> </a>
         <div class="circle-extension"></div>
       </div>
       
@@ -240,15 +239,15 @@
               </div>
               <div class="testimonial-text">
                 <p>
-                  “Anurag is a talented, committed individual who will leave no
+                  Jahith is a talented, committed individual who will leave no
                   stone unturned in his pursuit to provide with the best. His
                   attention to detail and in-depth experience in the of web
                   development is indeed commendable. He has exhibited exemplary
                   skills in the field, and I hope to see all the great projects
                   coming up!”
                 </p>
-                <h2>Saatvik Nagpal</h2>
-                <h5>Founder, EazyGrad</h5>
+                <h2>Mohammed Sajah</h2>
+                <h5>Founder,Asasiin</h5>
               </div>
             </div>
           </div>
@@ -259,14 +258,14 @@
               </div>
               <div class="testimonial-text">
                 <p>
-                  “Anurag was a wonderful developer to work with! He anticipated
+                  Jahith was a wonderful developer to work with! He anticipated
                   everything I need to consider for my website. He also went
                   the extra mile and added details that I hadn't considered! He
                   is helping my business grow, and I will definitely work with
                   him again!”
                 </p>
-                <h2>Kira Bragg</h2>
-                <h5>English Mentor</h5>
+                <h2>Roshan Akthar </h2>
+                <h5>Backend Developer</h5>
               </div>
             </div>
           </div>
@@ -277,12 +276,12 @@
               </div>
               <div class="testimonial-text">
                 <p>
-                  “I worked with Anurag to make my website. I
+                  “I worked with Jahith to make my website. I
                   am speechless by looking at his work ethic and dedication.
                   Working with him was the best decision I made.”
                 </p>
-                <h2>Srihari Kestur </h2>
-                <h5>Founder Harigurus</h5>
+                <h2> Aashiq Aathambawa </h2>
+                <h5>Backend Developer</h5>
               </div>
             </div>
           </div>
