--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
                   coming up!”
                 </p>
                 <h2>Mohammed Sajah</h2>
-                <h5>Founder,Asasiin</h5>
+                <h5>Founder,Asasiin soft</h5>
               </div>
             </div>
           </div>
