--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
           <div class="swiper-slide">
             <div class="swiper-card">
               <div class="testimonial-image">
-                <img src="images/moon.png" alt="testimonial 2" />
+                <img src="images/aa.png" alt="testimonial 2" />
               </div>
               <div class="testimonial-text">
                 <p>
@@ -292,12 +292,12 @@
               </div>
               <div class="testimonial-text">
                 <p>
-                  “I can bet that it's too hard to find professional developers
+                  “I can bet that it's too hard to find developers
                   like Anurag. He could peek inside my mind and made the site
                   exactly as I wanted. Much appreciated”
                 </p>
-                <h2>Gautham Chengappa</h2>
-                <h5>Web Developer, UX Consultancy</h5>
+                <h2>Arzath Aareef</h2>
+                <h5>Web Developer</h5>
               </div>
             </div>
           </div>
