--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
               </div>
               <div class="testimonial-text">
                 <p>
-                  “I worked with Jahith to make my website. I
+                  “I worked with Mr.Jahith to make my website. I
                   am speechless by looking at his work ethic and dedication.
                   Working with him was the best decision I made.”
                 </p>
