--- a/index.html
+++ b/index.html
@@ -293,7 +293,7 @@
               <div class="testimonial-text">
                 <p>
                   “I can bet that it's too hard to find developers
-                  like Anurag. He could peek inside my mind and made the site
+                  like Jahith. He could peek inside my mind and made the site
                   exactly as I wanted. Much appreciated”
                 </p>
                 <h2>Arzath Aareef</h2>
