image being updated

--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
           <div class="swiper-slide">
             <div class="swiper-card">
               <div class="testimonial-image">
-                <img src="images/moon.png" alt="testimonial 1" />
+                <img src="images/ss.jpeg.jpg" alt="testimonial 1" />
               </div>
               <div class="testimonial-text">
                 <p>
